# CuPBoP_Vortex

./: .gitignore  CMakeLists.txt  CuPBoP_env_setup.sh  CuPBoP_env_setup_wo_PoCL.sh  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  lint.yml
compilation/: CMakeLists.txt  HostTranslation.cpp  KernelTranslation.cpp
compilation/HostTranslation/: CMakeLists.txt
compilation/HostTranslation/src/vortex/: ReplaceConstantMemory.cpp  ReplaceCudaBuiltin.cpp  ReplaceKernelArgs.cpp
compilation/HostTranslation/src/x86/: ReplaceCudaBuiltin.cpp  ReplaceKernelArgs.cpp
compilation/KernelTranslation/: CMakeLists.txt
data/bfs/: graph20.txt
data/gaussian/: matrix4.txt
data/hotspot/: power_16  temp_16
docs/: BenchmarkCreation.md  BenchmarkList.md  ComonIssues.md  FinalSetup.md  Makefile.md  NonKiaVolvoSetup.md  README_Codebase.md  README_Defs.md  Tools.md  kjrun_llvm18.sh
examples/: CGO_batch_run.sh  collect_result.py  makefile
examples/atomicAggregate-cuda/: host_vortexrt.cpp  main.cu
examples/backprop/: backprop_cuda-host-x86_64-unknown-linux-gnu.ll  backprop_cuda.cu  host_vortexrt.cpp  kernel_wrapper.cpp  kjrun.sh  kjrun_llvm18.sh  vrun.sh
examples/bfs/: bfs.cu  host_vortexrt.cpp  kernel_wrapper.cpp  kjrun.sh  kjrun_llvm18.sh  lookup.txt  run.sh  vrun.sh
examples/bh-cuda/: host_vortexrt.cpp  kjrun_llvm18.sh  main.cu
examples/blackscholes(still working)/: cudaBlackScholes_common.h  cuda_blackscholes_all.cu  cuda_run.sh  cuda_utils.h  kjrun_llvm18.sh
examples/bscan-cuda/: host_vortexrt.cpp  kjrun_llvm18.sh  main.cu
examples/btree/: cuda_run.sh  host_vortexrt.cpp  kjrun.sh  kjrun_llvm18.sh  main.c  run.sh  vrun.sh
examples/cc-cuda/: host_vortexrt.cpp  kjrun_llvm18.sh  main.cu  main_original.cu
examples/cfd/: euler3d.cu  kernel_wrapper.cpp  kjrun.sh  kjrun_llvm18.sh  kjrun_llvm18_post.sh  run.sh  vrun.sh
examples/cg_mse/: mse.cu  mse_sw.cu
examples/cg_testcase1/: build.sh  cooperative_groups_fake.h  host_vortexrt.cpp  kjrun_llvm18.sh  run.sh  testcase1.cu  vortex_headers_dummy.h
examples/collision-cuda/: host_vortexrt.cpp  main.cu
examples/conv3/: conv3.cu  kjrun_llvm18.sh
examples/dotproduct/: dotproduct.cu  kjrun_llvm18.sh  kjrun_llvm18_post.sh
examples/gauss/: gaussian.cu  kernel_wrapper.cpp  kjrun.sh  kjrun_llvm18.sh  lookup.txt  vrun.sh
examples/gc-cuda/: host_vortexrt.cpp  kjrun_llvm18.sh  main copy.cu  main.cu
examples/heartwall/: main.cu  vrun.sh
examples/hotspot/: host_vortexrt.cpp  hotspot.cu  hotspot_mark.cu  kernel_wrapper.cpp  kjrun.sh  kjrun_llvm18.sh  vrun.sh
examples/hotspot3D/: kernel_wrapper.cpp  vrun.sh
examples/huffman/: main_test_cu-host-x86_64-unknown-linux-gnu.ll  vrun.sh
examples/jaccard-cuda/: host_vortexrt.cpp  kjrun_llvm18.sh  main.cu
runtime/: CMakeLists.txt
runtime/include/: cudaKernelImpl.h  cudaRuntimeImpl.h
runtime/lib/: cudaRuntimeImpl.cpp
runtime/src/vortex/: CMakeLists.txt  cudaRuntimeImpl.cpp
runtime/src/vortex/host/: cudaRuntimeImpl.cpp
runtime/src/vortex/kernel/: CMakeLists.txt  Makefile  cudaKernelImpl.cpp
runtime/threadPool/: CMakeLists.txt
runtime/threadPool/lib/: api.cpp
runtime/threadPool/src/: api.cpp
runtime/vortex/: CMakeLists.txt
runtime/vortex/threadPool/: CMakeLists.txt
runtime/x86/: CMakeLists.txt
runtime/x86/src/: cudaRuntimeImpl.cpp
runtime/x86/threadPool/: CMakeLists.txt
(+157 files in other folders)
